# Pet-Projects

./: CMakeLists.txt  CropClassification.ipynb  README.md  Segmentation.ipynb
Algorithms/fun1/files/: kg.csv
Algorithms/fun1/src/: City.cpp  distance.cpp  main.cpp
Algorithms/fun3/src/: main.cpp
Algorithms/fun4/: supreme_leader_simulator.cpp
Algorithms/oj/: oj1.cpp  oj11.cpp  oj18.cpp  oj2.cpp  oj6.cpp  ojjj1.cpp
DataStructures/Biginteger/src/: BigIntException.cpp  Biginteger.cpp  Biginteger.h
DataStructures/Huffman encoding/: decode.cpp  encode.cpp
InternshipTasks/: FutureStarsTrack13.cpp  FutureStarsTrack4.py
IntroToProgramming/Project-01/src/: Problem01.java  Problem02.java  Problem03.java  Problem04.java  Problem05.java  Problem06.java  Problem07.java
IntroToProgramming/lab-01/src/: Problem01.java  Problem02.java  Problem03.java  Problem04.java  Problem05.java  Problem06.java  (+4 more)
OJ problems/OJ Algorithms/: oj5.cpp  ojjj11.cpp  ojjj14.cpp
OJ problems/OJ DataStructures/: oj1.cpp  oj12.cpp  oj14.cpp  oj16.cpp  oj17.cpp  oj19.cpp  oj2.cpp  oj20.cpp  oj24.cpp  oj3.cpp  oj4.cpp  oj5.cpp  oj6.cpp  oj9.cpp
OJ problems/oj/: oj17.cpp  oj9.cpp  ojjj6.cpp
PCS/lab-04/: p1923.c  strutil.h
PCS/project/: my_string.h  proj.c
fun1/src/: Cities.cpp  Cities.h  City.cpp  City.h  Graph.cpp  Graph.h  main.cpp
fun3/files/: Data3.json
fun3/src/: main.cpp
fun4/: supreme_leader_simulator.cpp
oj/: oj12.cpp  oj16.cpp  oj19.cpp  oj20.cpp  oj3.cpp  oj4.cpp  oj7.cpp  oj8.cpp  ojjj12.cpp  ojjj13.cpp  ojjj3.cpp  ojjj4.cpp  ojjj5.cpp  ojjj7.cpp  ojjj8.cpp  ojjj9.cpp
(+208 files in other folders)
